<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/login_user_img"
        android:layout_toEndOf="@+id/login_user_img">

        <EditText
            android:id="@+id/input_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textNoSuggestions"
            android:hint="@string/hint_username" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/login_user_img"
        android:layout_toEndOf="@+id/login_user_img">

        <EditText
            android:id="@+id/input_repo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:inputType="textNoSuggestions"
            android:hint="@string/hint_repo" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>