<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/changeRepo"
        android:icon="@drawable/ic_border_color_white_24dp"
        app:showAsAction="always"
        android:title="@string/change"/>
</menu>